--- a/site/index.html
+++ b/site/index.html
@@ -483,9 +483,9 @@
 <h1 id="welcome-to-luka-ljubojevic">Welcome to Luka Ljubojevic</h1>
 <h2 id="whats-here">Whats here?</h2>
 <ul>
-<li><a href="/docs/about.md">Who am I?</a></li>
-<li><a href="/docs/demonstrature.md">Materials for exercising Computer Networks</a></li>
-<li><a href="/docs/notes.md">Some random - for education purposes - useful Linux tutorials</a></li>
+<li><a href="about.html">Who am I?</a></li>
+<li><a href="demonstrature.html">Materials for exercising Computer Networks</a></li>
+<li><a href="notes.html">Some random - for education purposes - useful Linux tutorials</a></li>
 </ul>
 <p>A meme:
 HTTP404 Meme not found :(</p>
